# remix-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  docs.yml  homebrew.yml  pypi.yml  release.yml
docs/: .gitignore  examples.md  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  vocs.config.ts
docs/pages/: acknowledgements.mdx  architecture.mdx  configuration.mdx  contributing.mdx  examples.mdx  getting-started.mdx  index.mdx  installation.mdx  troubleshooting.mdx
docs/pages/tools/: browser.mdx  clips.mdx  cue-points.mdx  devices.mdx  index.mdx  scenes.mdx  song.mdx  tracks.mdx  transport.mdx  view.mdx
homebrew/: generate-formula.sh  remix-mcp.rb
src/: error.rs  installer.rs  lib.rs  main.rs  server.rs
src/osc/: client.rs  message.rs  mod.rs  response.rs
src/tools/: application.rs  browser.rs  clips.rs  cue_points.rs  devices.rs  midimap.rs  mod.rs  scenes.rs  song.rs  tracks.rs  transport.rs  view.rs
src/types/: ids.rs  mod.rs  params.rs  tool_params.rs
tests/: integration.rs  unit_tests.rs
tests/snapshots/: unit_tests__add_notes_message_snapshot.snap  unit_tests__browser_search_message_snapshot.snap  unit_tests__browser_search_results_snapshot.snap  unit_tests__clip_info_response_snapshot.snap  unit_tests__fire_clip_message_snapshot.snap  unit_tests__load_instrument_message_snapshot.snap  unit_tests__midi_note_snapshot.snap  unit_tests__osc_response_structure_snapshot.snap  unit_tests__set_tempo_message_snapshot.snap  unit_tests__tempo_query_message_snapshot.snap  unit_tests__track_info_response_snapshot.snap  unit_tests__track_volume_message_snapshot.snap
