[package]
name = "remix-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for controlling Ableton Live via OSC"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
rosc = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.18"
console = "0.15"
whoami = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
rstest = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
large_stack_arrays = "allow"
large_futures = "allow"
return_self_not_must_use = "allow"
bool_to_int_with_if = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
large_stack_frames = "allow"
similar_names = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
manual_async_fn = "allow"
map_unwrap_or = "allow"
single_match_else = "allow"
